@@ -240,9 +240,9 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 				/* Settings > General */
 				'is_stripe_enabled'                     => $this->gateway->is_enabled(),
 				'is_test_mode_enabled'                  => $this->gateway->is_in_test_mode(),
-				'title'                                 => $this->gateway->get_option( 'title' ),
-				'title_upe'                             => $this->gateway->get_option( 'title_upe' ),
-				'description'                           => $this->gateway->get_option( 'description' ),
+				'title'                                 => $this->gateway->get_validated_option( 'title' ),
+				'title_upe'                             => $this->gateway->get_validated_option( 'title_upe' ),
+				'description'                           => $this->gateway->get_validated_option( 'description' ),
 
 				/* Settings > Payments accepted on checkout */
 				'enabled_payment_method_ids'            => $this->gateway->get_upe_enabled_payment_method_ids(),
@@ -250,18 +250,18 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 
 				/* Settings > Express checkouts */
 				'is_payment_request_enabled'            => 'yes' === $this->gateway->get_option( 'payment_request' ),
-				'payment_request_button_type'           => $this->gateway->get_option( 'payment_request_button_type' ),
-				'payment_request_button_theme'          => $this->gateway->get_option( 'payment_request_button_theme' ),
-				'payment_request_button_size'           => $this->gateway->get_option( 'payment_request_button_size' ),
-				'payment_request_button_locations'      => $this->gateway->get_option( 'payment_request_button_locations' ),
+				'payment_request_button_type'           => $this->gateway->get_validated_option( 'payment_request_button_type' ),
+				'payment_request_button_theme'          => $this->gateway->get_validated_option( 'payment_request_button_theme' ),
+				'payment_request_button_size'           => $this->gateway->get_validated_option( 'payment_request_button_size' ),
+				'payment_request_button_locations'      => $this->gateway->get_validated_option( 'payment_request_button_locations' ),
 
 				/* Settings > Payments & transactions */
 				'is_manual_capture_enabled'             => ! $this->gateway->is_automatic_capture_enabled(),
 				'is_saved_cards_enabled'                => 'yes' === $this->gateway->get_option( 'saved_cards' ),
 				'is_separate_card_form_enabled'         => 'no' === $this->gateway->get_option( 'inline_cc_form' ),
-				'statement_descriptor'                  => $this->gateway->get_option( 'statement_descriptor' ),
+				'statement_descriptor'                  => $this->gateway->get_validated_option( 'statement_descriptor' ),
 				'is_short_statement_descriptor_enabled' => 'yes' === $this->gateway->get_option( 'is_short_statement_descriptor_enabled' ),
-				'short_statement_descriptor'            => $this->gateway->get_option( 'short_statement_descriptor' ),
+				'short_statement_descriptor'            => $this->gateway->get_validated_option( 'short_statement_descriptor' ),
 
 				/* Settings > Advanced settings */
 				'is_debug_log_enabled'                  => 'yes' === $this->gateway->get_option( 'logging' ),
@@ -336,7 +336,7 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 			return;
 		}
 
-		$this->gateway->update_option( 'title', $title );
+		$this->gateway->update_validated_option( 'title', $title );
 	}
 
 	/**
@@ -351,7 +351,7 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 			return;
 		}
 
-		$this->gateway->update_option( 'title_upe', $title_upe );
+		$this->gateway->update_validated_option( 'title_upe', $title_upe );
 	}
 
 	/**
@@ -366,7 +366,7 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 			return;
 		}
 
-		$this->gateway->update_option( 'description', $description );
+		$this->gateway->update_validated_option( 'description', $description );
 	}
 
 	/**
@@ -456,7 +456,7 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 			return;
 		}
 
-		$this->gateway->update_option( 'statement_descriptor', $account_statement_descriptor );
+		$this->gateway->update_validated_option( 'statement_descriptor', $account_statement_descriptor );
 	}
 
 	/**
@@ -492,7 +492,7 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 			return;
 		}
 
-		$this->gateway->update_option( 'short_statement_descriptor', $short_account_statement_descriptor );
+		$this->gateway->update_validated_option( 'short_statement_descriptor', $short_account_statement_descriptor );
 	}
 
 	/**
@@ -553,7 +553,7 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 			}
 
 			$value = $request->get_param( $request_key );
-			$this->gateway->update_option( $attribute, $value );
+			$this->gateway->update_validated_option( $attribute, $value );
 		}
 	}
 
